# flappyBird

./: CMakeLists.txt
cmake_modules/: FindSFML.cmake
headers/: AssetManager.h  Bird.h  Collision.h  DEFINITIONS.h  Flash.h  Game.h  GameOverState.h  GameState.h  HUD.h  InputManager.h  Land.h  MainMenuState.h  Pipe.h  SplashState.h  State.h  StateMachine.h
src/: AssetManager.cpp  Bird.cpp  Collision.cpp  Flash.cpp  Game.cpp  GameOverState.cpp  GameState.cpp  HUD.cpp  InputManager.cpp  Land.cpp  MainMenuState.cpp  Pipe.cpp  SplashState.cpp  StateMachine.cpp  main.cpp
